--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
 <!DOCTYPE html>
+<html>
+    <head> 
+        <meta charset="UTF=8">
+        <meta name="viewport" content="with=device-width, initial-cale=1.0">
+   <title>AluraBooks</title>
+    </head>
+    <body>
+        
+    </body>
+</html>
