--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
+<!DOCTYPE **html**>
 <html>
-    <head> 
-        <meta charset="UTF=8">
-        <meta name="viewport" content="with=device-width, initial-cale=1.0">
-   <title>AluraBooks</title>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>AluraBooks</title>
+        <link rel=”stylesheet” href=”styles.css”>
     </head>
     <body>
-        
+
     </body>
 </html>
