--- a/index.html
+++ b/index.html
@@ -10,3 +10,15 @@
         <h1>AluraBook</h1>
     </body>
 </html>
+<body>
+    <h1>AluraBook</h1>
+</body>
+:root {
+    --cor-de-fundo: #EBECEE;
+}
+body {
+    background-color: var(--cor-de-fundo);
+}
+h1 {
+    background-color: white;
+}
